Add Firebase API key to npm-test workflow
adding Firebase secret key

--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -6,6 +6,8 @@ jobs:
     strategy:
       matrix:
         node_version: [18.x]
+    env:
+      FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js $
